drrx/fixtures/invalid/invalid-marker-after-name.tree.drrx
.                         # root
+-- src/|
| +== thing.py           # EXPECTED ERROR: FW.14 flow markers limited to prefix; '|' after name invalid
